--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dingma.ca/",
+  "homepage": "https://aehwany.github.io/personal-website",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
