--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "bootstrap": "^4.5.0",
     "jquery": "^3.2.1",
-    "react": "^16.2.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.2.0",
     "react-ga": "^2.3.5",
+    "react-notifications-component": "^2.4.0",
     "react-responsive-modal": "^4.0.1",
     "react-scripts": "1.0.17",
     "react-typed": "^1.2.0",
-    "react-notifications-component": "^2.4.0"
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "predeploy": "npm run build",
