--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aehwany.github.io/personal-website",
+  "homepage": "https://ahmedelehwany.com/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +22,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && echo dingma.ca >./build/CNAME",
+    "build": "react-scripts build && echo ahmedelehwany.com >./build/CNAME",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
