--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.3.5",
+    "react-github-button": "^0.1.11",
     "react-notifications-component": "^2.4.0",
     "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.2.0",
